--- a/package.json
+++ b/package.json
@@ -5,17 +5,23 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate": "sequelize db:migrate"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "config3": "^1.1.0",
     "express": "^4.17.1",
+    "knex": "^0.21.1",
     "lodash": "^4.17.15",
     "nodemon": "^2.0.4",
-    "sequelize": "^5.21.10"
+    "pg": "^8.2.1",
+    "request-ip": "^2.1.3",
+    "sequelize": "^5.21.10",
+    "sequelize-cli": "^5.5.1"
   }
 }
