--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
   "dependencies": {
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
-    "config3": "^1.1.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "knex": "^0.21.1",
     "lodash": "^4.17.15",
     "nodemon": "^2.0.4",
     "pg": "^8.2.1",
