--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "request-ip": "^2.1.3",
     "sequelize": "^5.21.10",
     "sequelize-cli": "^5.5.1"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
